--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -5,14 +5,10 @@ instance:
 driver:
   name: vagrant
   customize:
-    memory: 4096
-    cpus: 2
+    memory: 2048
 
 provisioner:
   name: chef_zero
-  # You may wish to disable always updating cookbooks in CI or other testing environments.
-  # For example:
-  #   always_update_cookbooks: <%= !ENV['CI'] %>
   always_update_cookbooks: true
 
 verifier:
@@ -20,14 +16,17 @@ verifier:
 
 platforms:
   - name: ubuntu-16.04
-  # - name: centos-7
 
 suites:
-  - name: default
+  - name: build
     run_list:
-      - recipe[spigot::periodic_update]
       - recipe[spigot::buildtools]
     verifier:
       inspec_tests:
         - test/integration/default
+    attributes:
+  - name: default
+    run_list:
+    verifier:
+      inspec_tests:
     attributes:
